# ClashMonitorPlugin

./: .gitignore  CMakeLists.txt  ClashNodeItem.cpp  ClashNodeItem.h  ClashPlugin.cpp  ClashPlugin.h  HttpHelper.cpp  HttpHelper.h  JsonParser.cpp  JsonParser.h  PROJECT_SUMMARY.md  PluginInterface.h  README.md  Settings.cpp  Settings.h  SystemProxy.cpp  SystemProxy.h  build32-final.sh  build32.sh  build64-mingw.sh  build64-msvcrt.sh  build64-pure.sh  build64.sh  diag.cpp  diag2.cpp  dllmain.cpp  framework.h  loadtest.cpp  loadtest2.cpp  minimal_test.cpp  patchtest.cpp  pch.h  toggletest.cpp
